tests/reference/tokens-paren3-0d47100.stderr
tokenizer error: Parenthesis unexpected
 --> tests/tokens/errors/paren3.py:2:1
  |
2 | ] {}}
  | ^ 
